style/keyboard.css
html {
  font-size: 10px;
  pointer-events: none;
}
body {
  margin: 0;
  overflow: hidden;
}
button {
  padding: 0;
  border: 0;
}

#keyboard {
  display: table;
  position: absolute;
  width: 100%;
  bottom: 0;
  border-top-width: 0.1rem;
  border-top-style: solid;
  border-top-color: #A1A5A8;
  background-color: #606B6E;
  pointer-events: auto;
  visibility: visible;
}
#row {
  display: table-row;
  background: linear-gradient(to bottom, #5b6668, #606b6e);
}

.keyboard-div {
  width: 1px;
  border: none;
  background: none;
  vertical-align: bottom;
}
.keyboard-key {
  display: table-cell;
  padding: 0;
  min-width: 3.1rem;
  min-height: 5.1rem;
  font-size: 2.5rem;
  font-family: 'Fira Sans';
  border: none;
  border-radius: 0;
  background: none;
  color: #FFFFFF;
  pointer-events: auto;
  flex: auto;
}
.keyboard-key:active {
  color: #00CAF2;
  background-color: #4D4D4D;
}
.function-key {
  display: table-cell;
  padding: 0;
  padding-left: 1.3rem;
  padding-right: 1.3rem;
  min-width: 3.4rem;
  min-height: 5.1rem;
  font-size: 1.9rem;
  font-family: 'Fira Sans';
  border: none;
  border-radius: 0;
  background: none;
  color: #A6A6A6;
  pointer-events: auto;
  flex: auto;
}
.function-key:active {
  color: #00CAF2;
  background-color: #4D4D4D;
}

